kube/erepro-listings.yaml
apiVersion: v1
kind: Service
metadata:
  name: listings
  labels:
    app: listings
spec:
  ports:
  - port: 9090
    name: http
  selector:
    app: listings
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: listings-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: listings
        version: v1
    spec:
      containerserPort: 9090
